# GLCI

./: .travis.yml  CMakeLists.txt  README.md
src/: main.cpp
src/glci/: GLInstance.cpp  GLInstance.hpp
